refactor, FINNALY GTESTS WORKS

--- a/OrderBook/MatchingEngine/MatchingEngine.vcxproj.filters
+++ b/OrderBook/MatchingEngine/MatchingEngine.vcxproj.filters
@@ -20,8 +20,8 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Trade.h">
-      <Filter>Pliki zasobów</Filter>
+    <ClInclude Include="engine.h">
+      <Filter>Pliki nagłówkowe</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
