--- a/OrderBook/MatchingEngine/MatchingEngine.vcxproj
+++ b/OrderBook/MatchingEngine/MatchingEngine.vcxproj
@@ -102,6 +102,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp20</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -126,10 +127,10 @@
     <ClCompile Include="MatchingEngine.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Trade.h" />
+    <ClInclude Include="engine.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\OrderBook.vcxproj">
+    <ProjectReference Include="..\OrderBook\OrderBook.vcxproj">
       <Project>{44ebbd98-76bc-4242-8576-6e20aadf10aa}</Project>
     </ProjectReference>
   </ItemGroup>
